--- a/.github/workflows/deploy_template_dev.yaml
+++ b/.github/workflows/deploy_template_dev.yaml
@@ -25,5 +25,5 @@ jobs:
       - name: Copy files to the test website with the AWS CLI
         run: |
           latest=$(ls template | sort -V | tail -1)
-          jq '.Resources.AcornSetAccountCredentials.Properties.ServiceToken."Fn::Sub"[0] = "${{ secrets.AWS_LAMBDA_FN_ARN }}" | .Parameters.Principal.Default = "${{ secrets.AWS_DEFAULT_PRINCIPAL }}"' template/$latest > template/$latest
-          aws s3 cp template/$latest s3://${{ secrets.CF_TEMPLATE_BUCKET }}/$latest --acl public-read
+          jq '.Resources.AcornSetAccountCredentials.Properties.ServiceToken."Fn::Sub"[0] = "${{ secrets.AWS_LAMBDA_FN_ARN }}" | .Parameters.Principal.Default = "${{ secrets.AWS_DEFAULT_PRINCIPAL }}"' template/$latest > template/$latest.processed
+          aws s3 cp template/$latest.processed s3://${{ secrets.CF_TEMPLATE_BUCKET }}/$latest --acl public-read
