--- a/.github/workflows/deploy_lambda_dev.yaml
+++ b/.github/workflows/deploy_lambda_dev.yaml
@@ -1,9 +1,9 @@
-name: Update Dev Lambda
+name: deploy-lambda
 
 on:
   workflow_dispatch:
   push:
-    ignore-paths:
+    paths-ignore:
       - 'template/**'
       - '.github/**'
     branches:
@@ -11,32 +11,29 @@ on:
 
 jobs:
   deploy_lambda:
-    env:
-      TAG: main
+    strategy:
+      matrix:
+        include:
+          - region: "us-east-2"
+            bucket: "acorn-provisioning-cf20230327205401904900000001"
     name: Build and deploy lambda
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
+      - uses: actions/setup-go@v4
+        with:
+          cache: false
+          go-version: "1.20"
+      - name: make package
+        run: make package
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: us-east-1
-
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          registry-type: public
-
-      - name: Build
-        env:
-          REGISTRY: "${{ secrets.ECR_REGISTRY }}"
-          TAG: ${{ env.TAG }}
-        run: make push-image
+          aws-region: ${{ matrix.region }}
+      - name: Deploy new code to s3 bucket
+        run: |
+          aws s3 cp aws-registration-callback.zip s3://${{ matrix.bucket }}/aws-registration-callback.zip --acl public-read
