--- a/.github/workflows/deploy_lambda_stg.yaml
+++ b/.github/workflows/deploy_lambda_stg.yaml
@@ -1,13 +1,9 @@
-name: Deploy lambda to S3 for dev
+name: Deploy lambda to S3 for stg
 
 on:
   workflow_dispatch:
-  push:
-    paths-ignore:
-      - 'template/**'
-      - '.github/**'
-    branches:
-      - main
+  schedule:
+    - cron: '00 10 * * *'   # time in UTC
 
 jobs:
   deploy_lambda:
@@ -15,7 +11,7 @@ jobs:
       matrix:
         include:
           - region: "us-east-2"
-            bucket: "acorn-provisioning-cf-us-east-220230411215929005300000001"
+            bucket: "acorn-provisioning-cf-us-east-220230411221247894300000001"
     name: Build and deploy lambda
     runs-on: ubuntu-latest
     steps:
@@ -31,8 +27,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_STG }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_STG }}
           aws-region: ${{ matrix.region }}
       - name: Deploy new code to s3 bucket
         run: |
