--- a/.github/workflows/deploy_template_dev.yaml
+++ b/.github/workflows/deploy_template_dev.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'template/**'
+      - "template/**"
     branches:
       - main
 
@@ -15,6 +15,10 @@ jobs:
         include:
           - region: "us-east-2"
             bucket: "acorn-provisioning-cf-us-east-220230411215929005300000001"
+          - region: "us-west-2"
+            bucket: "acorn-provisioning-cf-us-west-220230413223524509000000001"
+          - region: "eu-north-1"
+            bucket: "acorn-provisioning-cf-eu-north-120230413223525295100000001"
     name: Deploy template to S3
     runs-on: ubuntu-latest
     steps:
