--- a/.github/workflows/deploy_template_prod.yaml
+++ b/.github/workflows/deploy_template_prod.yaml
@@ -9,7 +9,11 @@ jobs:
       matrix:
         include:
           - region: "us-east-2"
-            bucket: "acorn-provisioning-cf-us-east-220230411221940422300000001"
+            bucket: "acorn-provisioning-cf-us-east-220230413224010722900000001"
+          - region: "us-west-2"
+            bucket: "acorn-provisioning-cf-us-west-220230413224011053200000001"
+          - region: "eu-north-1"
+            bucket: "acorn-provisioning-cf-eu-north-120230413224011490400000001"
     name: Deploy template to S3
     runs-on: ubuntu-latest
     steps:
